# Astrome-assessment

./: README.md  data_gen.py
backend/: database.py  hogwarts.db  main.py  populate_test_data.py  pyproject.toml  requirements.txt
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx
client/src/components/: ConnectionStatus.jsx  Controls.jsx  EventNotification.jsx  Header.jsx  HouseDetails.jsx  LeaderboardChart.jsx
client/src/constants/: houseData.js
client/src/hooks/: useHouseData.js  useWebSocket.js
client/src/utils/: chartUtils.js
