[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "sqlite-utils>=3.38",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
